complete day3 part 2

--- a/2025/cmd/daygen/templates/day_test.go.tmpl
+++ b/2025/cmd/daygen/templates/day_test.go.tmpl
@@ -21,15 +21,12 @@ func example1() string {
 
 func TestPart1(t *testing.T) {
 	answer := 0 // TODO: update to answer
-
 	input, err := os.ReadFile("input.txt")
-	if err != nil {
-		t.Fatalf("failed to read input.txt: %v", err)
-	}
+	require.NoError(t, err, "failed to read input.txt")
 
 	result, err := day{{.Day}}.Part1(bytes.NewReader(input))
-	require.NoError(t, err)
 
+	require.NoError(t, err)
 	if result != answer {
 		assert.Equal(t, result, answer)
 	}
@@ -37,24 +34,21 @@ func TestPart1(t *testing.T) {
 
 func TestPart1_Example1(t *testing.T) {
 	answer := 0 // TODO: update to answer
-	result, err := day{{.Day}}.Part1(bytes.NewReader([]byte(example1())))
-	if err != nil {
-		t.Fatalf("Part1 failed: %v", err)
-	}
 
+	result, err := day{{.Day}}.Part1(bytes.NewReader([]byte(example1())))
+
+	require.NoError(t, err)
 	assert.Equal(t, answer, result)
 }
 
 func TestPart2(t *testing.T) {
 	answer := 0 // TODO: update to answer
 	input, err := os.ReadFile("input.txt")
-	if err != nil {
-		t.Fatalf("failed to read input.txt: %v", err)
-	}
+	require.NoError(t, err, "failed to read input.txt")
 
 	result, err := day{{.Day}}.Part2(bytes.NewReader(input))
-	require.NoError(t, err)
 
+	require.NoError(t, err)
 	if result != answer {
 		assert.Equal(t, answer, result)
 	}
@@ -62,9 +56,9 @@ func TestPart2(t *testing.T) {
 
 func TestPart2_Example1(t *testing.T) {
 	answer := 0 // TODO: update to answer
+
 	result, err := day{{.Day}}.Part2(bytes.NewReader([]byte(example1())))
-	if err != nil {
-		t.Fatalf("Part2 failed: %v", err)
-	}
+
+	require.NoError(t, err)
 	assert.Equal(t, answer, result)
 }
