--- a/2025/cmd/daygen/templates/day_test.go.tmpl
+++ b/2025/cmd/daygen/templates/day_test.go.tmpl
@@ -28,7 +28,7 @@ func TestPart1(t *testing.T) {
 
 	require.NoError(t, err)
 	if result != answer {
-		assert.Equal(t, result, answer)
+		assert.Equal(t, answer, result)
 	}
 }
 
